<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MerchantMenuActivity">

    <ImageButton
        android:id="@+id/burger_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="360dp"
        android:contentDescription="@string/Burger_Meal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r111"
        app:srcCompat="@drawable/burger" />

    <RelativeLayout
        android:id="@+id/topBanner"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/menu_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/menuTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/restaurants_menu"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/hotdog_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginLeft="103dp"
        android:layout_marginEnd="104dp"
        android:layout_marginRight="104dp"
        android:contentDescription="@string/Hotdog_Meal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/burger_btn2"
        app:layout_constraintVertical_bias="0.273"
        app:srcCompat="@drawable/hotdog" />

    <Button
        android:id="@+id/editBtn"
        android:layout_width="138dp"
        android:layout_height="45dp"
        android:text="@string/edit_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topBanner"
        app:layout_constraintVertical_bias="0.976" />
</androidx.constraintlayout.widget.ConstraintLayout>